--- a/admin goed/admin.css
+++ b/admin goed/admin.css
@@ -3,7 +3,7 @@
         background-color: rgba(237, 245, 255, 0.742);
     }
 
-    /* login*/
+    /* login & navigatie */
 
     #logo {
         width: 5%;
@@ -19,7 +19,7 @@
         left: 0;
         display: flex;
         align-items: center;
-       /* justify-content: center;       Om de navbar in het midden te plaatsen*/
+        /* justify-content: center;       Om de navbar in het midden te plaatsen*/
     }
 
     .woorden {
@@ -41,8 +41,7 @@
     }
 
     .woorden a:hover {
-        text-decoration: underline
-;
+        text-decoration: underline;
     }
 
     #header-index {
@@ -84,7 +83,7 @@
     }
 
     .login-box input {
-        
+
         width: 93%;
         padding: 10px;
         margin-bottom: 15px;
@@ -101,11 +100,11 @@
         text-decoration: none;
         border-radius: 4px;
     }
-   
 
 
 
-    /* product*/
+
+    /* product inventaris */
     #h1-product {
         text-align: center;
         color: #333;
@@ -149,23 +148,23 @@
         gap: 10px;
         flex-wrap: wrap;
     }
-    
+
     .product-toevoegen-container {
         text-align: center;
     }
-    
+
     .product-toevoegen-btn {
         display: inline-block;
         padding: 10px 20px;
         margin-top: 10px;
-        background-color: #4e7aa5; 
+        background-color: #4e7aa5;
         color: white;
         text-decoration: none;
-        border-radius: 15px; 
+        border-radius: 15px;
     }
 
 
-    /* product toevoegen*/
+    /* product toevoegen / bewerken */
     form {
         background-color: #fff;
         padding: 20px;
@@ -202,7 +201,7 @@
         border-radius: 4px;
     }
 
-    #h1toevoegen{
+    #h1toevoegen {
         text-align: center;
         margin-top: 100px;
     }
